--- a/internal/components/design.templ
+++ b/internal/components/design.templ
@@ -14,8 +14,9 @@ templ rawPage(title string) {
             <title>{ title } | scaler</title>
             <meta charset="UTF-8" />
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-            <script src="https://cdn.tailwindcss.com"></script>
-            <script src="https://unpkg.com/htmx.org@1.9.6" integrity="sha384-FhXw7b6AlE/jyjlZH5iHa/tTe9EpJ1Y55RjcgPbjeWMskSxZt1v9qkxLJWNJaGni" crossorigin="anonymous"></script>
+            <link rel="icon" type="image/x-icon" href="/_statics/favicon.ico">
+            <script src="/_statics/tailwind.js"></script>
+            <script src="/_statics/htmx.js"></script>
         </head>
         <body class="bg-slate-900 text-white max-w-4xl my-0 mx-auto">
             { children... }
@@ -81,14 +82,14 @@ templ DeploymentListPage(deployments []v1.Deployment) {
                             for _, dpl := range deployments {
                                 <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
                                     <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                                        <a href={templ.URL("/" + dpl.ObjectMeta.Namespace + "/" + dpl.ObjectMeta.Name)}>{dpl.ObjectMeta.Name}</a>
+                                        <a href={templ.URL("/_deployments/" + dpl.ObjectMeta.Namespace + "/" + dpl.ObjectMeta.Name)}>{dpl.ObjectMeta.Name}</a>
                                     </th>
                                     <td class="px-6 py-4">
                                         <span class="bg-blue-100 text-blue-800 text-xs font-medium me-1 px-1.5 py-0.5 rounded dark:bg-gray-700 dark:text-blue-400 border border-blue-400">{dpl.ObjectMeta.Namespace}</span>
                                     </td>
                                     <td class="px-6 py-4 text-right">
                                         <label class="inline-flex items-center cursor-pointer">
-                                            <input type="checkbox" value="" class="sr-only peer" checked?={!(dpl.Spec.Replicas == nil || *dpl.Spec.Replicas == 0)} hx-post={ "/_toggle/" + dpl.ObjectMeta.Namespace + "/" + dpl.ObjectMeta.Name }>
+                                            <input type="checkbox" value="" class="sr-only peer" checked?={!(dpl.Spec.Replicas == nil || *dpl.Spec.Replicas == 0)} hx-post={ "/_deployments/" + dpl.ObjectMeta.Namespace + "/" + dpl.ObjectMeta.Name }>
                                             <div class="relative w-11 h-6 bg-red-500 rounded-full peer peer-focus:ring-4 peer-focus:ring-green-300 dark:peer-focus:ring-green-800 dark:bg-red-900 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-red-900 peer-checked:bg-green-600"></div>
                                         </label>
                                     </td>
@@ -152,7 +153,7 @@ templ DeploymentDetailsPage(deployment *v1.Deployment) {
                                 </th>
                                 <th scope="row" class="px-6 py-4 text-right font-medium text-gray-900 whitespace-nowrap dark:text-white">
                                     <label class="inline-flex items-center cursor-pointer">
-                                        <input type="checkbox" value="" class="sr-only peer" checked?={!(deployment.Spec.Replicas == nil || *deployment.Spec.Replicas == 0)} hx-post={ "/_toggle/" + deployment.ObjectMeta.Namespace + "/" + deployment.ObjectMeta.Name }>
+                                        <input type="checkbox" value="" class="sr-only peer" checked?={!(deployment.Spec.Replicas == nil || *deployment.Spec.Replicas == 0)} hx-post={ "/_deployments/" + deployment.ObjectMeta.Namespace + "/" + deployment.ObjectMeta.Name }>
                                         <div class="relative w-11 h-6 bg-red-500 rounded-full peer peer-focus:ring-4 peer-focus:ring-green-300 dark:peer-focus:ring-green-800 dark:bg-red-900 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-red-900 peer-checked:bg-green-600"></div>
                                     </label>
                                 </th>
