--- a/internal/components/design.templ
+++ b/internal/components/design.templ
@@ -3,7 +3,6 @@ package components
 // Full Page
 	
 import (
-    "strconv"
     v1 "k8s.io/api/apps/v1"
 )
 
@@ -24,93 +23,13 @@ templ rawPage(title string) {
     </html>
 }
 
-templ NotFoundPage() {
-    @rawPage("Not Found") {
-        <div class="w-full px-16 md:px-0 h-screen flex items-center justify-center">
-            <div class="bg-white border border-gray-200 flex flex-col items-center justify-center px-4 md:px-8 lg:px-24 py-8 rounded-lg shadow-2xl">
-                <p class="text-6xl md:text-7xl lg:text-9xl font-bold tracking-wider text-gray-300">404</p>
-                <p class="text-2xl md:text-3xl lg:text-5xl font-bold tracking-wider text-gray-500 mt-4">Page Not Found</p>
-                <p class="text-gray-500 mt-4 pb-4 border-b-2 text-center">Sorry, the page you are looking for could not be found.</p>
-                <a href="/" class="flex items-center space-x-2 bg-blue-600 hover:bg-blue-700 text-gray-100 px-4 py-2 mt-6 rounded transition duration-150" title="Return Home">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-                        <path fill-rule="evenodd" d="M9.707 14.707a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 1.414L7.414 9H15a1 1 0 110 2H7.414l2.293 2.293a1 1 0 010 1.414z" clip-rule="evenodd"></path>
-                    </svg>
-                    <span>Return Home</span>
-                </a>
-            </div>
-        </div>
-    }
-}
-
-
-templ ErrorPage() {
-    @rawPage("Server Error") {
-        <div class="w-full px-16 md:px-0 h-screen flex items-center justify-center">
-            <div class="bg-white border border-gray-200 flex flex-col items-center justify-center px-4 md:px-8 lg:px-24 py-8 rounded-lg shadow-2xl">
-                <p class="text-6xl md:text-7xl lg:text-9xl font-bold tracking-wider text-gray-300">500</p>
-                <p class="text-2xl md:text-3xl lg:text-5xl font-bold tracking-wider text-gray-500 mt-4">Server Error</p>
-                <p class="text-gray-500 mt-8 py-2 border-y-2 text-center">Whoops, something went wrong on our servers.</p>
-            </div>
-        </div>
-    }
-}
-
-templ DeploymentListPage(deployments []v1.Deployment) {
-    @rawPage("Deployments List") {
-        <div class="px-4 sm:px-8 max-w-5xl m-auto pt-2">
-            <div class="flex flex-col">
-                <div class="flex flex-row justify-between items-center">
-                    <a href="/" class="text-4xl">Scaler</a>
-                    <p class="text-base text-gray-500">Manually scale up or down your deployments</p>
-                </div>
-                <div class="relative overflow-x-auto shadow-md sm:rounded-lg mt-4">
-                    <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-                        <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
-                            <tr>
-                                <th scope="col" class="px-6 py-3">
-                                    Deployment
-                                </th>
-                                <th scope="col" class="px-6 py-3">
-                                    Namespace
-                                </th>
-                                <th scope="col" class="px-6 py-3 text-right">
-                                    Scale
-                                </th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            for _, dpl := range deployments {
-                                <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
-                                    <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                                        <a href={templ.URL("/_deployments/" + dpl.ObjectMeta.Namespace + "/" + dpl.ObjectMeta.Name)}>{dpl.ObjectMeta.Name}</a>
-                                    </th>
-                                    <td class="px-6 py-4">
-                                        <span class="bg-blue-100 text-blue-800 text-xs font-medium me-1 px-1.5 py-0.5 rounded dark:bg-gray-700 dark:text-blue-400 border border-blue-400">{dpl.ObjectMeta.Namespace}</span>
-                                    </td>
-                                    <td class="px-6 py-4 text-right">
-                                        <label class="inline-flex items-center cursor-pointer">
-                                            <input type="checkbox" value="" class="sr-only peer" checked?={!(dpl.Spec.Replicas == nil || *dpl.Spec.Replicas == 0)} hx-post={ "/_deployments/" + dpl.ObjectMeta.Namespace + "/" + dpl.ObjectMeta.Name }>
-                                            <div class="relative w-11 h-6 bg-red-500 rounded-full peer peer-focus:ring-4 peer-focus:ring-green-300 dark:peer-focus:ring-green-800 dark:bg-red-900 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-red-900 peer-checked:bg-green-600"></div>
-                                        </label>
-                                    </td>
-                                </tr>
-                            } 
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    }
-}
-
-
-templ DeploymentDetailsPage(deployment *v1.Deployment) {
+templ DetailsPage(deployment *v1.Deployment) {
     @rawPage("Deployment Details") {
         <div class="px-4 sm:px-8 max-w-5xl m-auto pt-2">
             <div class="flex flex-col">
                 <div class="flex flex-row justify-between items-center">
-                    <a href="/" class="text-4xl">Scaler</a>
-                    <p class="text-base text-gray-500">Manually scale up or down your deployments</p>
+                    <a href="/" class="text-4xl">Fallback</a>
+                    <p class="text-base text-gray-500">Your service is down</p>
                 </div>
                 <div class="relative overflow-x-auto shadow-md sm:rounded-lg mt-4">
                     <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
@@ -133,27 +52,11 @@ templ DeploymentDetailsPage(deployment *v1.Deployment) {
                             </tr>
                             <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
                                 <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                                    Replicas
-                                </th>
-                                <th scope="row" class="px-6 py-4 text-right font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                                    {strconv.Itoa(int(*deployment.Spec.Replicas))}
-                                </th>
-                            </tr>
-                            <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
-                                <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                                    Pods
-                                </th>
-                                <th scope="row" class="px-6 py-4 text-right font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                                    {strconv.Itoa(int(deployment.Status.Replicas))}
-                                </th>
-                            </tr>
-                            <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
-                                <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
                                     Scale
                                 </th>
                                 <th scope="row" class="px-6 py-4 text-right font-medium text-gray-900 whitespace-nowrap dark:text-white">
                                     <label class="inline-flex items-center cursor-pointer">
-                                        <input type="checkbox" value="" class="sr-only peer" checked?={!(deployment.Spec.Replicas == nil || *deployment.Spec.Replicas == 0)} hx-post={ "/_deployments/" + deployment.ObjectMeta.Namespace + "/" + deployment.ObjectMeta.Name }>
+                                        <input type="checkbox" value="" class="sr-only peer" checked?={!(deployment.Spec.Replicas == nil || *deployment.Spec.Replicas == 0)} hx-post={ "/_toggle/" }>
                                         <div class="relative w-11 h-6 bg-red-500 rounded-full peer peer-focus:ring-4 peer-focus:ring-green-300 dark:peer-focus:ring-green-800 dark:bg-red-900 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-red-900 peer-checked:bg-green-600"></div>
                                     </label>
                                 </th>
